--- a/beer/beer quiz.html
+++ b/beer/beer quiz.html
@@ -79,7 +79,7 @@
           <th rowspan="3">Matanuska
            
             <h2> 
-              <img src="matanuska.png">
+              <img src="matanuska.png" width="200px">
             </h2>
             
           </th>
